<resources>
    <string name="app_name">Mine Field Alarm</string>
    <string name="about_app_title">About App</string>
    <string name="about_org_title">About Organisation</string>
    <string name="settings_title">Options</string>
    <string name="tracking_service_switch">Tracking Service</string>
    <string name="about_app_text">This application serves to prevent its user entering a minefield You should use this app with extreme caution due to imperfection of tracking services. The application triggers alarm when user is approximately 500 meters far away from the minefield.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="udas_descr">The Organization of Amputees Republike Srpske (UDAS) (Serbian: Организација Aмпутираца УДАС Републике Српске) is registered as a nonprofit organization and non-governmental organization based in Banja Luka, Bosnia and Herzegovina, founded by amputees which are mostly landmine victims in order to provide support for victims of landmines, unexploded ordnance (UXO), cluster munition and other persons with disabilities and their families to integrate them back into the community, thus enabling them to live normal lives.</string>
    <string name="organisation_name">UDAS organisation</string>
    <string name="udas_hyperlink">http://www.udas.rs.ba</string>
    <string name="send_us_email_btn">Send us email</string>
    <string name="subject_hint">Subject</string>
    <string name="contact_us">Contact us:</string>
</resources>
