<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ladislav.minefieldalarm.activities.AboutOrganisationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/organisation_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/udas_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/udas_descr"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/contact_us"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/emailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:inputType="textEmailSubject"
        android:hint="@string/subject_hint" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:text="@string/send_us_email_btn" />

    <TextView
        android:id="@+id/webSiteUdas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.00"
        android:autoLink="web"
        android:text="@string/udas_hyperlink"
        android:textAlignment="center" />

</LinearLayout>
